--- a/static_files/page2.html
+++ b/static_files/page2.html
@@ -3,10 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zippy</title>
+    <title>Page 2</title>
 </head>
 <body>
-    <h1>Welcome to zippy</h1>
-    <a href="./app/page2.html">Page 2</a>
+    <h1>Page 2</h1>
 </body>
 </html>
