--- a/static_files/index.html
+++ b/static_files/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to zippy</h1>
-    <a href="./app/page2.html">Page 2</a>
+    <a href="./page2.html">Page 2</a>
 </body>
 </html>
