--- a/static_files/index.html
+++ b/static_files/index.html
@@ -1,12 +1,40 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!DOCTYPE html><html lang="en"><head>
+    <meta charset="utf-8">
+    <script type="module">import init from '/zippy-98163858db45447f.js';init('/zippy-98163858db45447f_bg.wasm');</script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zippy</title>
-</head>
+    <!-- <link data-trunk rel="icon" type="image/ico" href="/public/favicon.ico" /> -->
+    <link rel="stylesheet" href="/output-99ac4d731d92f684.css">
+    <!-- <title>Zippy • Welcome</title> -->
+
+<link rel="preload" href="/zippy-98163858db45447f_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/zippy-98163858db45447f.js"></head>
 <body>
-    <h1>Welcome to zippy</h1>
-    <a href="./page2.html">Page 2</a>
-</body>
-</html>
+<script>(function () {
+    var protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+    var url = protocol + '//' + window.location.host + '/_trunk/ws';
+    var poll_interval = 5000;
+    var reload_upon_connect = () => {
+        window.setTimeout(
+            () => {
+                // when we successfully reconnect, we'll force a
+                // reload (since we presumably lost connection to
+                // trunk due to it being killed, so it will have
+                // rebuilt on restart)
+                var ws = new WebSocket(url);
+                ws.onopen = () => window.location.reload();
+                ws.onclose = reload_upon_connect;
+            },
+            poll_interval);
+    };
+
+    var ws = new WebSocket(url);
+    ws.onmessage = (ev) => {
+        const msg = JSON.parse(ev.data);
+        if (msg.reload) {
+            window.location.reload();
+        }
+    };
+    ws.onclose = reload_upon_connect;
+})()
+</script></body></html>
