able to copy assets to dist dir

--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,9 @@
     <link data-trunk rel="rust" data-wasm-opt="z" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link data-trunk rel="icon" type="image/ico" href="/public/favicon.ico" /> -->
+    <link data-trunk rel="icon" type="image/svg" href="/public/favicon.svg" />
     <link data-trunk rel="css" href="/style/output.css" />
+    <link data-trunk rel="copy-dir" href="public/assets/" />
 </head>
 <body></body>
 </html>
