--- a/web/index.html
+++ b/web/index.html
@@ -11,4 +11,10 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
 </head>
 <body></body>
+<script>
+    // const body=document.querySelector('body');
+    // body.addEventListener("contextmenu",(e)=>{
+    //     e.preventDefault()
+    // })
+</script>
 </html>
