--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,8 @@
     <link data-trunk rel="icon" type="image/svg" href="/public/favicon.svg" />
     <link data-trunk rel="css" href="/style/output.css" />
     <link data-trunk rel="copy-dir" href="public/assets/" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" /> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
 </head>
 <body></body>
 <script>
