--- a/web/index.html
+++ b/web/index.html
@@ -1,21 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <link data-trunk rel="rust" data-wasm-opt="z" />
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="shortcut icon" href="/favicon.svg" type="image/x-icon">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link data-trunk rel="icon" type="image/svg" href="/public/favicon.svg" />
-    <link data-trunk rel="css" href="/style/output.css" />
-    <link data-trunk rel="copy-dir" href="public/assets/" />
-    <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" /> -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
-</head>
-<body></body>
-<script>
-    // const body=document.querySelector('body');
-    // body.addEventListener("contextmenu",(e)=>{
-    //     e.preventDefault()
-    // })
-</script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Anvel</title>
+    <meta name="description" content="Anvel is a networking program for file sharing.">
+    <meta name="keywords" content="Anvel is a networking program for file sharing.">
+    <link rel="manifest" href="/manifest.json">
+   <!-- facebook -->
+    <meta property="fb:app_id" content="123456789">
+    <meta property="og:url" content="https://anvel.web.app">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Anvel is a networking program for file sharing.">
+    <meta property="og:image" content="https://anvel.web.app/favicon.svg">
+    <meta property="og:description" content="Anvel is a networking program for file sharing.">
+    <meta property="og:site_name" content="Anvel is a networking program for file sharing.">
+    <meta property="og:locale" content="en_US">
+    <meta property="article:author" content="Anvel is a networking program for file sharing..">
+    <!-- twitter -->
+    <meta name="twitter:card" content="Anvel is a networking program for file sharing.">
+    <meta name="twitter:site" content="Anvel is a networking program for file sharing.">
+    <meta name="twitter:creator" content="@matano_imran">
+    <meta name="twitter:url" content="https://anvel.web.app">
+    <meta name="twitter:title" content="Anvel is a networking program for file sharing.">
+    <meta name="twitter:description" content="Anvel is a networking program for file sharing.">
+    <meta name="twitter:image" content="https://anvel.web.app/favicon.svg">
+    <!-- google -->
+    <link href="https://plus.google.com/imranmatano" rel="publisher">
+    <meta itemprop="name" content="Anvel is a networking program for file sharing.">
+    <meta itemprop="description" content="Anvel is a networking program for file sharing.">
+    <meta itemprop="image" content="https://anvel.web.app/favicon.svg">
+    <!-- pwa -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
